--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo como estan?  </title>
+    <title>Hola Mundo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <h1>¡Hola Mundo!</h1>
+    <h1>HDennis pendejo Niggaaaaaaaaaaaa </h1>
 </body>
 </html>
