--- a/index.html
+++ b/index.html
@@ -1,118 +1,99 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Rompecabezas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        #puzzle-container {
-            display: grid;
-            grid-template-columns: repeat(3, 100px);
-            grid-gap: 5px;
-        }
-        .piece {
-            width: 100px;
-            height: 100px;
-            background-color: #4caf50;
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            user-select: none;
-        }
-        .empty {
-            background-color: #cccccc;
-            cursor: default;
-        }
-        #reset {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        #reset:hover {
-            background-color: #0056b3;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Snake Game</title>
+<style>
+    canvas {
+        border: 1px solid black;
+    }
+</style>
 </head>
 <body>
-    <div id="puzzle-container"></div>
-    <button id="reset">Reiniciar</button>
+<canvas id="gameCanvas" width="400" height="400"></canvas>
+<script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
 
-    <script>
-        const puzzleContainer = document.getElementById('puzzle-container');
-        const resetButton = document.getElementById('reset');
-        let puzzle = [];
-        const size = 3; // Tamaño del rompecabezas (3x3)
+    const snakeSize = 10;
+    let snake = [{x: 200, y: 200}];
+    let food = {x: Math.floor(Math.random() * canvas.width / snakeSize) * snakeSize, y: Math.floor(Math.random() * canvas.height / snakeSize) * snakeSize};
+    let dx = snakeSize;
+    let dy = 0;
 
-        function createPuzzle() {
-            puzzle = [...Array(size * size).keys()]; // Genera números del 0 al 8
-            puzzle.sort(() => Math.random() - 0.5); // Mezcla las piezas
-        }
-
-        function renderPuzzle() {
-            puzzleContainer.innerHTML = '';
-            puzzle.forEach((value, index) => {
-                const piece = document.createElement('div');
-                piece.classList.add('piece');
-                if (value === 0) {
-                    piece.classList.add('empty');
-                } else {
-                    piece.textContent = value;
-                    piece.addEventListener('click', () => movePiece(index));
-                }
-                puzzleContainer.appendChild(piece);
-            });
-        }
-
-        function movePiece(index) {
-            const emptyIndex = puzzle.indexOf(0);
-            const validMoves = [
-                emptyIndex - size, // Arriba
-                emptyIndex + size, // Abajo
-                emptyIndex - 1,    // Izquierda
-                emptyIndex + 1     // Derecha
-            ];
-
-            // Validar movimiento
-            if (validMoves.includes(index)) {
-                // Intercambiar piezas
-                [puzzle[index], puzzle[emptyIndex]] = [puzzle[emptyIndex], puzzle[index]];
-                renderPuzzle();
-                checkWin();
-            }
-        }
-
-        function checkWin() {
-            if (puzzle.every((value, index) => value === index)) {
-                setTimeout(() => alert('¡Felicidades, has resuelto el rompecabezas!'), 100);
-            }
-        }
-
-        resetButton.addEventListener('click', () => {
-            createPuzzle();
-            renderPuzzle();
+    function drawSnake() {
+        ctx.fillStyle = "green";
+        snake.forEach(segment => {
+            ctx.fillRect(segment.x, segment.y, snakeSize, snakeSize);            
         });
+    }
 
-        // Inicialización del juego
-        createPuzzle();
-        renderPuzzle();
-    </script>
+    function drawFood() {
+        ctx.fillStyle = "red";
+        ctx.fillRect(food.x, food.y, snakeSize, snakeSize);
+    }
+
+    function moveSnake() {
+        const head = {x: snake[0].x + dx, y: snake[0].y + dy};
+        snake.unshift(head);
+
+        if (head.x === food.x && head.y === food.y) {
+            food = {x: Math.floor(Math.random() * canvas.width / snakeSize) * snakeSize, y: Math.floor(Math.random() * canvas.height / snakeSize) * snakeSize};
+        } else {
+            snake.pop();
+        }
+    }
+
+    function checkCollision() {
+        if (snake[0].x < 0 || snake[0].x >= canvas.width || snake[0].y < 0 || snake[0].y >= canvas.height) {
+            gameOver();
+        }
+
+        for (let i = 1; i < snake.length; i++) {
+            if (snake[0].x === snake[i].x && snake[0].y === snake[i].y) {
+                gameOver();
+            }
+        }
+    }
+
+    function gameOver() {
+        alert("Game Over!");
+        snake = [{x: 200, y: 200}];
+        food = {x: Math.floor(Math.random() * canvas.width / snakeSize) * snakeSize, y: Math.floor(Math.random() * canvas.height / snakeSize) * snakeSize};
+        dx = snakeSize;
+        dy = 0;
+    }
+
+    function update() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawSnake();
+        drawFood();
+        moveSnake();
+        checkCollision();
+    }
+
+    function keyDownHandler(event) {
+        const key = event.key;
+        if (key === "ArrowLeft" && dx === 0) {
+            dx = -snakeSize;
+            dy = 0;
+        } else if (key === "ArrowRight" && dx === 0) {
+            dx = snakeSize;
+            dy = 0;
+        } else if (key === "ArrowUp" && dy === 0) {
+            dx = 0;
+            dy = -snakeSize;
+        } else if (key === "ArrowDown" && dy === 0) {
+            dx = 0;
+            dy = snakeSize;
+        }
+    }
+
+    document.addEventListener("keydown", keyDownHandler);
+
+    setInterval(update, 100);
+</script>
 </body>
 </html>
