--- a/index.html
+++ b/index.html
@@ -1,91 +1,130 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Ingreso de Productos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
+            margin: 20px;
         }
-        .login-container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            text-align: center;
+        .container {
+            max-width: 500px;
+            margin: 0 auto;
         }
-        .login-container h1 {
-            margin-bottom: 20px;
-            color: #333;
+        .form-group {
+            margin-bottom: 15px;
         }
-        .login-container input {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
+        label {
+            display: block;
+            margin-bottom: 5px;
         }
-        .login-container button {
-            background-color: #007bff;
-            color: white;
+        input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+        button {
             padding: 10px 15px;
+            background-color: #007BFF;
+            color: white;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
         }
-        .login-container button:hover {
+        button:hover {
             background-color: #0056b3;
-        }
-        .error {
-            color: red;
-            margin-top: 10px;
-            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>Iniciar Sesión</h1>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Usuario" required>
-            <input type="password" id="password" placeholder="Contraseña" required>
-            <button type="submit">Entrar</button>
+    <div class="container">
+        <h1>Inicio de Sesión</h1>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="username">Usuario</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="button" onclick="login()">Ingresar</button>
         </form>
-        <p class="error" id="errorMessage" style="display: none;">Usuario o contraseña incorrectos</p>
+
+        <div id="product-section" style="display: none; margin-top: 30px;">
+            <h1>Gestión de Productos</h1>
+            <form id="product-form">
+                <div class="form-group">
+                    <label for="product-name">Nombre del Producto</label>
+                    <input type="text" id="product-name" name="product-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="product-price">Precio</label>
+                    <input type="number" id="product-price" name="product-price" required>
+                </div>
+                <button type="button" onclick="addProduct()">Agregar Producto</button>
+            </form>
+
+            <h2>Buscar Producto</h2>
+            <input type="text" id="search-bar" placeholder="Buscar por nombre..." oninput="searchProduct()">
+            <ul id="product-list"></ul>
+        </div>
     </div>
 
     <script>
-        const loginForm = document.getElementById('loginForm');
-        const errorMessage = document.getElementById('errorMessage');
+        const products = [];
 
-        // Credenciales correctas
-        const CORRECT_USER = "admin";
-        const CORRECT_PASS = "12345";
-
-        loginForm.addEventListener('submit', function(event) {
-            event.preventDefault(); // Evita que el formulario se envíe automáticamente
-
+        function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            if (username === CORRECT_USER && password === CORRECT_PASS) {
-                // Redirigir a otra página si las credenciales son correctas
-                window.location.href = "pagina-secreta.html";
+            // Validación básica (esto debería conectarse al backend para autenticar)
+            if (username === 'admin' && password === '1234') {
+                alert('Inicio de sesión exitoso');
+                document.getElementById('login-form').style.display = 'none';
+                document.getElementById('product-section').style.display = 'block';
             } else {
-                // Mostrar mensaje de error
-                errorMessage.style.display = "block";
+                alert('Usuario o contraseña incorrectos');
             }
-        });
+        }
+
+        function addProduct() {
+            const name = document.getElementById('product-name').value;
+            const price = document.getElementById('product-price').value;
+
+            if (name && price) {
+                products.push({ name, price });
+                alert('Producto agregado');
+                document.getElementById('product-form').reset();
+                displayProducts();
+            } else {
+                alert('Por favor completa todos los campos');
+            }
+        }
+
+        function displayProducts() {
+            const list = document.getElementById('product-list');
+            list.innerHTML = '';
+            products.forEach((product, index) => {
+                const li = document.createElement('li');
+                li.textContent = ${product.name} - $${product.price};
+                list.appendChild(li);
+            });
+        }
+
+        function searchProduct() {
+            const query = document.getElementById('search-bar').value.toLowerCase();
+            const list = document.getElementById('product-list');
+            list.innerHTML = '';
+            products
+                .filter(product => product.name.toLowerCase().includes(query))
+                .forEach(product => {
+                    const li = document.createElement('li');
+                    li.textContent = ${product.name} - $${product.price};
+                    list.appendChild(li);
+                });
+        }
     </script>
 </body>
 </html>
