--- a/index.html
+++ b/index.html
@@ -1,129 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingreso de Productos</title>
+    <title>Inicio de Sesión</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
         }
-        .container {
-            max-width: 500px;
-            margin: 0 auto;
+        .login-container {
+            margin-top: 100px;
         }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
+        .login-container input {
             display: block;
-            margin-bottom: 5px;
+            margin: 10px auto;
+            padding: 10px;
+            font-size: 16px;
         }
-        input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 15px;
-            background-color: #007BFF;
+        .button {
+            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
+            padding: 10px 20px;
         }
-        button:hover {
-            background-color: #0056b3;
+        .button:hover {
+            background-color: #45a049;
+        }
+        .construction-container {
+            margin-top: 50px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="login-container">
         <h1>Inicio de Sesión</h1>
-        <form id="login-form">
-            <div class="form-group">
-                <label for="username">Usuario</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="button" onclick="login()">Ingresar</button>
+        <form id="loginForm" onsubmit="return validarCredenciales()">
+            <input type="text" id="username" placeholder="Usuario" required>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="submit" class="button">Iniciar Sesión</button>
         </form>
+    </div>
 
-        <div id="product-section" style="display: none; margin-top: 30px;">
-            <h1>Gestión de Productos</h1>
-            <form id="product-form">
-                <div class="form-group">
-                    <label for="product-name">Nombre del Producto</label>
-                    <input type="text" id="product-name" name="product-name" required>
-                </div>
-                <div class="form-group">
-                    <label for="product-price">Precio</label>
-                    <input type="number" id="product-price" name="product-price" required>
-                </div>
-                <button type="button" onclick="addProduct()">Agregar Producto</button>
-            </form>
-
-            <h2>Buscar Producto</h2>
-            <input type="text" id="search-bar" placeholder="Buscar por nombre..." oninput="searchProduct()">
-            <ul id="product-list"></ul>
-        </div>
+    <div class="construction-container" id="constructionPage" style="display: none;">
+        <h1>Página en Construcción</h1>
+        <img src="https://via.placeholder.com/400x300?text=Bob+el+Constructor" alt="Bob el Constructor">
+        <p>Estamos trabajando para ti. ¡Vuelve pronto!</p>
     </div>
 
     <script>
-        const products = [];
-
-        function login() {
+        function validarCredenciales() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            // Validación básica (esto debería conectarse al backend para autenticar)
-            if (username === 'admin' && password === '1234') {
-                alert('Inicio de sesión exitoso');
-                document.getElementById('login-form').style.display = 'none';
-                document.getElementById('product-section').style.display = 'block';
+            // Validación básica
+            if (username === "admin" && password === "1234") {
+                // Oculta el formulario de login y muestra la página en construcción
+                document.querySelector('.login-container').style.display = 'none';
+                document.getElementById('constructionPage').style.display = 'block';
             } else {
-                alert('Usuario o contraseña incorrectos');
+                alert('Usuario o contraseña incorrectos.');
             }
-        }
-
-        function addProduct() {
-            const name = document.getElementById('product-name').value;
-            const price = document.getElementById('product-price').value;
-
-            if (name && price) {
-                products.push({ name, price });
-                alert('Producto agregado');
-                document.getElementById('product-form').reset();
-                displayProducts();
-            } else {
-                alert('Por favor completa todos los campos');
-            }
-        }
-
-        function displayProducts() {
-            const list = document.getElementById('product-list');
-            list.innerHTML = '';
-            products.forEach((product, index) => {
-                const li = document.createElement('li');
-                li.textContent = ${product.name} - $${product.price};
-                list.appendChild(li);
-            });
-        }
-
-        function searchProduct() {
-            const query = document.getElementById('search-bar').value.toLowerCase();
-            const list = document.getElementById('product-list');
-            list.innerHTML = '';
-            products
-                .filter(product => product.name.toLowerCase().includes(query))
-                .forEach(product => {
-                    const li = document.createElement('li');
-                    li.textContent = ${product.name} - $${product.price};
-                    list.appendChild(li);
-                });
+            return false; // Evita que se recargue la página
         }
     </script>
 </body>
