--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </form>
     </div>
 
-        <div class="container">
+    <div class="construction-container" id="constructionPage" style="display: none;">
         <h1>Búsqueda de Repuestos</h1>
         <input type="text" id="searchBar" placeholder="Buscar repuestos...">
         <table>
@@ -92,7 +92,6 @@
             </tbody>
         </table>
     </div>
-
 
     <script>
         function validarCredenciales() {
