--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pantalla de Inicio</title>
+    <title>Inicio de Sesión</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        .login-container {
+            margin-top: 100px;
+        }
+        .login-container input {
+            display: block;
+            margin: 10px auto;
+            padding: 10px;
+            font-size: 16px;
+        }
+        .button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 10px 20px;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .construction-container {
+            margin-top: 50px;
+        }
+    </style>
+</head>
+<body>
+    <div class="login-container">
+        <h1>Inicio de Sesión</h1>
+        <form id="loginForm" onsubmit="return validarCredenciales()">
+            <input type="text" id="username" placeholder="Usuario" required>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="submit" class="button">Iniciar Sesión</button>
+        </form>
+    </div>
+
+    <div class="construction-container" id="constructionPage" style="display: none;">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menú Principal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,22 +60,16 @@
             margin: 0;
             background-color: #f5f5f5;
         }
-        .login-container {
+        .menu-container {
             padding: 20px;
             background: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-        input {
-            display: block;
-            width: 100%;
-            margin: 10px 0;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
         button {
+            display: block;
+            margin: 10px 0;
             padding: 10px 20px;
             background-color: #007BFF;
             color: white;
@@ -43,25 +83,31 @@
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>Inicio de Sesión</h1>
-        <input type="text" id="username" placeholder="Usuario">
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="login()">Iniciar Sesión</button>
+    <div class="menu-container">
+        <h1>Menú Principal</h1>
+        <button onclick="window.location.href='ingresar_productos.html'">Ingresar Productos de Bodega</button>
+        <button>Ingresar Órdenes</button>
+        <button>Buscar Producto de Bodegas</button>
+        <button>Órdenes de Técnico</button>
     </div>
 
     <script>
-        function login() {
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
+        function validarCredenciales() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
 
-            // Validación simple de usuario y contraseña
+            // Validación básica
             if (username === "admin" && password === "1234") {
-                window.location.href = "menu.html"; // Redirigir a la pantalla del menú
+                // Oculta el formulario de login y muestra la página en construcción
+                document.querySelector('.login-container').style.display = 'none';
+                document.getElementById('constructionPage').style.display = 'block';
             } else {
-                alert("Usuario o contraseña incorrectos");
+                alert('Usuario o contraseña incorrectos.');
             }
+            return false; // Evita que se recargue la página
         }
     </script>
+</body>
+</html>
 </body>
 </html>
