--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <button>Ingresar Órdenes</button>
         <button>Buscar Producto de Bodegas</button>
         <button>Órdenes de Técnico</button>
-    </div>
+    </div
 
     <script>
         function validarCredenciales() {
